[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Room.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Card.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Cards_UI.gd" type="Script" id=3]

[node name="SceneChanger" type="Node2D"]

[node name="Room" parent="." instance=ExtResource( 1 )]

[node name="Cards UI" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="HUD" type="Control" parent="Cards UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 1.0

[node name="CardContainer" type="HBoxContainer" parent="Cards UI/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -154.0
margin_top = -150.0
margin_right = 154.0
rect_min_size = Vector2( 100, 150 )
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="Card1" parent="Cards UI/HUD/CardContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 150.0

[node name="Card2" parent="Cards UI/HUD/CardContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_right = 204.0
margin_bottom = 150.0

[node name="Card3" parent="Cards UI/HUD/CardContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 208.0
margin_right = 308.0
margin_bottom = 150.0

[node name="HBoxContainer" type="HBoxContainer" parent="Cards UI/HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Cards UI/HUD/HBoxContainer"]
margin_top = 13.0
margin_bottom = 27.0

[connection signal="pressed" from="Cards UI/HUD/CardContainer/Card1" to="Cards UI" method="_on_Card1_pressed"]
[connection signal="pressed" from="Cards UI/HUD/CardContainer/Card2" to="Cards UI" method="_on_Card2_pressed"]
[connection signal="pressed" from="Cards UI/HUD/CardContainer/Card3" to="Cards UI" method="_on_Card3_pressed"]
